# prabhasa-babylm

./: .env.example  .gitignore  AGENTS.md  CHARTER.md  CLAUDE.md  CORPUS_PREP_SUMMARY.md  Dockerfile  LICENSE  Makefile  QUICK_START.md  README.md  TASK_COMPLETION_REPORT.md  corpus_manifest.json  pll_seed0_chain.sh  pyproject.toml  seed2_after_eval.sh
.claude/agents/: adversarial-reviewer.md  babylm-experimentalist.md  nyaya-darshana.md  panini-vyakarana.md  paper-smith.md  shabdabodha-vyutpatti.md
.cursor/rules/: citation-integrity.mdc  closure-contract.mdc  config-driven.mdc  design-principles.mdc  statistical-rigor.mdc  tdd.mdc
.github/workflows/: ci.yml  pages.yml
.serena/: project.yml
.serena/memories/: architecture.md  closure_contract.md  project_overview.md  suggested_commands.md
configs/: base.yaml  tier1_proxy_60m.yaml
configs/data/: babylm-corpus-manifest-strict.yaml  babylm-corpus-manifest-strict_small.yaml  dyck_matched_36d4c762e39a.yaml
configs/phase1/: tokenizer.yaml
configs/phase2/: arm_A_baseline.yaml  arm_B_paninian_en.yaml  arm_C_dyck_en.yaml  arm_D_paninian_karaka_en.yaml  arm_E_paninian_en_10m.yaml  arm_F_paninian_skt_en.yaml  arm_G_baseline_skt_en.yaml
configs/phase3/: README.md  base_v0.2.yaml
data/fixtures/: paninian_v1.sha256  shabdabodha-aligned-ci.jsonl  vidyut-fixtures-ci.jsonl
data/hp_search/: best_config.json  results.jsonl
data/nyaya_generated/: nli_examples.jsonl  pramana_examples.jsonl
data/official_scores/: m1_elc_seed0.json  m1_elc_seed0_strict-small.json  m1_elc_seed1.json  m1_vanilla_seed0.json  m1_vanilla_seed1.json
docs/: PRABHASA_CLOSURE_PLAN.md  PRABHASA_DEEP_ENGINES.md  PRABHASA_MASTER_PLAN.md  PRABHASA_STRATEGY_V2.md  VISION.md  implementation-plan.md  prd.md  spec.md
docs/contracts/: README.md  aligned-pair-schema.json  closure-contract.md  corpus-diversity-ceiling-finding.md  crystallization-track-charter-2026-06-01.md  full-eval-and-leaderboard-2026-06.md  integration-data-engine-v2-2026-06.md  integration-data-engine-v2-wave2-2026-06.md  integration-wave3-experiment-enablement-2026-06.md  interface-freeze-2026-06.md  leaderboard-closure-promise-2026-06.md  p3-info-parity-finding.md  phase-0-closure-report.json  phase-0.yaml  phase-1-closure-report.json  phase-1-tarka-memo.md  phase-1.yaml  phase-2-battery-launch-decision-2026-05-31.md  phase-2-floor-and-metric-decision-2026-06-01.md  phase-2-floor-escalation-and-crystallization-2026-06-01.md  phase-2-h1-tarka-memo.md  phase-2-sample-efficiency-readout-2026-06-01.md  phase-2-schedule-fairness-and-review-2026-05-31.md  phase-2.yaml  phase-3.yaml  phase-4.yaml  phase-5.yaml  phase-6.yaml  reframe-2026-06-foundation.md  workstream-dyck-acceptance.yaml  workstream-dyck-closure-report.json  workstream-dyck-tarka-memo.md  workstream-measurement-acceptance.yaml  workstream-measurement-closure-report.json  workstream-measurement-tarka-memo.md  workstream-paribhasha-acceptance.yaml  workstream-paribhasha-closure-report.json  workstream-paribhasha-tarka-memo.md  workstream-vidyut-acceptance.yaml  workstream-vidyut-closure-report.json  (+1 more)
docs/data/: babylm-tokenizer-fertility.md  backbone-elc-psalm-architecture.md  crystallization-m1-results.json  dyck-match-report.md  (+30 more)
notebooks/: 01_minimal_pairs.ipynb  02_shabdabodha_pipeline.ipynb  03_reproduce_eval.ipynb  demo_01_prabhasa_inference.ipynb  demo_02_mechanism_visualization.ipynb  demo_03_reproduce_blimp.ipynb
paper/: README.md  changes.sty  make_developmental_curve.py  make_figures.py  psalm.tex  psalm_emnlp.tex  psalm_emnlp_final.tex  psalm_short.tex  references.bib  references_new.bib
research/: open_questions.md
scripts/: acd_m3_faithfulness_gate.py  acd_smoke_npi_licensing.py  analyze_developmental_curve.py  analyze_h1.py  analyze_rqA.py  assemble_strict_small.py  await_battery_and_closeout.sh  backfill_blimp.py  bench_attention_backends.py  bench_elc_throughput.py  bench_train_profiles.py  build_arm_corpora.py  build_babylm_joint_tokenizer.py  build_dyck_control.py  build_generator_lexicon.py  build_karaka_lookup.py  build_nhot_matrix.py  build_project_record.py  build_shabdabodha_cache.py  build_tokenizer.py  cache_samsadhani.py  closeout_battery.sh  corpus_manifest_gen.py  crystallization_m1.py  crystallization_spike.py  dyck_recompute_match.py  eval_blimp_causal.py  eval_blimp_pll.py  eval_finetune.py  export_hf_model.py  export_shabdabodha_pairs.py  export_site_results.py  export_vidyut_fixtures.py  fetch_small_track_corpus.sh  generate_dose_grammar.py  generate_nyaya_dataset.py  hp_search.py  make_paper_figures.py  measure_corpus_diversity.py  measure_paribhasha_parity.py  (+36 more)
site/: README.md  astro.config.mjs  package-lock.json  package.json
submission/: EVAL_OUTCOMES_REPORT.md  MANIFEST.txt  METRICS_SUMMARY.md  README.md  SUBMISSION_INDEX.md  babylm_eval_runbook.md  babylm_submission_form.html  fetch_leaderboard.py  strict_metadata.json  strict_small_metadata.json  submit_babylm.py
tests/: conftest.py  test_english_karaka_spacy.py
(+371 files in other folders)
