[project]
name = "psalm"
version = "0.1.0"
description = "Panini Structured pretraining for Small LAnguage Models: a grammar-as-data-engine + Navya-Nyaya epistemic stack for sample-efficient SLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PSALM Project" }]
keywords = [
    "slm",
    "small-language-model",
    "sanskrit",
    "panini",
    "vyakarana",
    "navya-nyaya",
    "pretraining",
    "sample-efficiency",
    "compositional-generalization",
    "neurosymbolic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "numpy>=1.26",
    "panini-data-toolkit",
]

[project.optional-dependencies]
# Heavy ML stack. Installed in the NGC container / on the DGX Spark.
ml = [
    "torch>=2.4",
    "transformers>=4.44",
    "datasets>=2.20",
    "tokenizers>=0.19",
    "sentencepiece>=0.2",
    "accelerate>=0.33",
    "trl>=0.9",
    "peft>=0.12",
    "huggingface-hub>=0.24",
    "wandb>=0.17",
    "tensorboard>=2.16",
]
# Light data-engine stack (tokenizer + HF corpus gather/publish). aarch64-friendly,
# no torch, so it can run in the base env and CI for the Phase 1 data engine.
data = [
    "sentencepiece>=0.2",
    "huggingface-hub>=0.24",
    "datasets>=2.20",
    "pyarrow>=16.0",
]
# Verification / neurosymbolic kernel (H3).
verification = [
    "z3-solver>=4.12",
]
# Statistical validation of hypotheses.
stats = [
    "scipy>=1.13",
    "pandas>=2.2",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
]
# Local long-term memory / knowledge store.
memory = [
    "chromadb>=0.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-PyYAML>=6.0",
]
all = ["psalm[ml,data,verification,stats,memory,dev]"]

[project.scripts]
psalm = "psalm.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psalm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "gpu: marks tests requiring a GPU",
    "e2e: marks end-to-end tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/psalm"]
omit = [
    "*/infrastructure/ml/*",
    "*/infrastructure/generators/external/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
    "def __repr__",
]
show_missing = true
# Closure contract: TECHNICAL layer gate.
fail_under = 80

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["psalm"]

[tool.ruff.lint.per-file-ignores]
# Typer's Argument/Option-in-default is the idiomatic CLI pattern.
"src/psalm/cli/*" = ["B008"]
# Tests may use asserts on optionals after explicit None-checks.
"tests/*" = ["B011"]
# Optional sentencepiece: imports after importorskip.
"tests/unit/test_babylm_joint_tokenizer.py" = ["E402", "I001"]
"tests/unit/test_tokenizer.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.11"
packages = ["psalm"]
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# ML infra adapters wrap untyped third-party libs; checked structurally elsewhere.
exclude = ["src/psalm/infrastructure/ml/", "src/psalm/infrastructure/generators/external/"]

# The Vidyut adapter wraps a partially-typed native extension whose enum/factory
# attributes are not visible to the stub checker; behaviour is covered by tests.
[[tool.mypy.overrides]]
module = "psalm.infrastructure.generators.vidyut_source"
disable_error_code = ["attr-defined", "no-untyped-call"]

[[tool.mypy.overrides]]
module = "psalm.infrastructure.generators.samsadhani"
disable_error_code = ["attr-defined", "no-untyped-call", "no-untyped-def"]

[tool.uv.sources]
panini-data-toolkit = { path = "../panini-data-toolkit", editable = true }
